# windows-kernel-exploits

./: LICENSE  README.md
CVE-2017-0213/: CVE-2017-0213.cpp  README.md
CVE-2017-8464/: README.md  cve_2017_8464_lnk_rce.rb
CVE-2018-0833/: README.md  poc.py
CVE-2018-8120/: README.md
CVE-2018-8453/: README.md
CVE-2018-8453/exp-x86_pool_fengshui/: README.md
CVE-2018-8453/exp-x86_pool_fengshui/cve8453-GUI/: cve8453.sln
CVE-2018-8453/exp-x86_pool_fengshui/cve8453-GUI/cve8453/: ReadMe.txt  Resource.h  cve8453.aps  cve8453.cpp  cve8453.rc  cve8453.vcxproj  cve8453.vcxproj.filters  stdafx.cpp  stdafx.h
CVE-2018-8453/exp-x86_pool_fengshui/cve8453-GUI/cve8453/Debug/: cve8453.res  vc140.idb
CVE-2018-8453/exp-x86_pool_fengshui/exp_CUI/: exp.sln
CVE-2018-8453/exp-x86_pool_fengshui/exp_CUI/exp/: exp.cpp  exp.vcxproj  exp.vcxproj.filters
CVE-2018-8453/exp-x86_pool_fengshui/exp_CUI/exp/Debug/: exp.pch  vc140.idb
CVE-2018-8453/exp-x86_pool_fengshui/exp_CUI/exp/Release/: exp.pch
CVE-2018-8453/exp-x86_pool_fengshui/exp_CUI/ipch/EXP-7a579913/: EXP-12a44d53.ipch  EXP-c8e60a99.ipch
CVE-2018-8453/exp-x86_pool_fengshui/exp_webshell/exp/: ReadMe.txt  exp.cpp  stdafx.cpp
CVE-2018-8453/exp-x86_pool_fengshui/exp_webshell/exp/Debug/: vc140.idb
CVE-2018-8453/exp_x64_palette_length/exp/: _asm.asm  exp.cpp  exp.vcxproj.filters
CVE-2018-8453/exp_x64_palette_length/ipch/EXP-7a579913/: EXP-4c98b977.ipch  EXP-4dbe2bb1.ipch  EXP-c8e60a99.ipch
CVE-2018-8453/exp_x64_palette_length/ipch/EXP-a3e8b7c3/: EXP-4dbe2bb1.ipch
CVE-2018-8453/exp_x64_palette_paddress/: exp.sln
CVE-2018-8453/exp_x64_palette_paddress/exp/: exp.cpp  exp.vcxproj
CVE-2018-8453/exp_x64_palette_paddress/ipch/EXP-736257b7/: EXP-4dbe2bb1.ipch
MS03-026/: 66.c  README.md  ms03-026.c
MS05-039/: PnP_Service.c  README.md
MS06-040/: 2355.pm  README.md  ms06040.rar
MS08-025/: README.md  ms08025.rar
MS08-067/: 40279.py  README.md
MS08-068/: Disable_Port_445.reg  Enable_Port_445.reg  README.md
MS08-068/src/: httprelay.cpp  httprelay.h  imaprelay.cpp  imaprelay.h  misc.cpp  misc.h  ntlm.cpp  ntlm.h  payload.cpp  payload.h  pop3relay.cpp  pop3relay.h  smb.cpp  smb.h  smbrelay.h  smbrelay3.cpp  smtprelay.cpp  smtprelay.h
MS09-012/: MS09-012KB952004-CVE-2009-0079-烤肉Churrasco.rar  README.md
MS09-012/Chimichurri/: Chimichurri.ncb  ReadMe.txt
MS09-012/Chimichurri/.svn/: all-wcprops  entries
MS09-012/Chimichurri/.svn/text-base/: Chimichurri.cpp.svn-base  Chimichurri.sln.svn-base  Chimichurri.suo.svn-base  Chimichurri.vcproj.svn-base  stdafx.cpp.svn-base  stdafx.h.svn-base
MS09-012/Chimichurri/Debug/.svn/: all-wcprops  entries
MS09-020/: README.md
MS09-050/: 40280.py  41987.py  README.md
MS10-012/: MS10-012.txt  MS10-020.py  README.md
MS10-015/: CVE-2010-0232.txt  MS10-015KB977165-CVE-2010-0232-Ms-Viru.rar  README.md
MS10-048/: README.md
MS10-059/: README.md
MS10-065/: README.md
MS10-092/: CVE-2010-3338.wsf  MS10-092.rb  README.md
MS11-011/: 16262.c  README.md
MS11-046/: CVE-2011-1249.c  README.md
MS11-062/: CVE-2011-1974.c  README.md
MS11-080/: CVE-2011-2005.py  README.md
MS12-020/: MS12-020.rb  MS12-020KB2621440-CVE-2012-0002.rar  README.md  rdpclient.rar
MS12-042/: README.md
MS12-042/sysret-source/: sysret.sln
MS12-042/sysret-source/junk/: ReadMe.txt  junk.vcxproj  junk.vcxproj.filters  krnlutils.cpp  log.cpp  log.h  peutil.h  peutils.cpp  stdafx.cpp  sysret.cpp  sysret.h  trigger.asm
MS12-042/sysret-source/junk/MinHook/: MinHook.h  MinHook.x64.lib
MS12-042/sysret-source/junk/sources/: CMakeLists.txt
MS12-042/sysret-source/junk/sources/beaengineSources/: BeaEngine.c  CMakeLists.txt  README.txt
MS12-042/sysret-source/junk/sources/beaengineSources/Includes/: BeaEngineVersion.c  Routines_Disasm.c  Routines_ModRM.c  internal_datas.h  protos.h
MS12-042/sysret-source/junk/sources/beaengineSources/Includes/instr_set/: Data_opcode.h  opcodes_AES.c  opcodes_A_M.c  opcodes_CLMUL.c  opcodes_FPU.c  opcodes_Grp1.c  opcodes_Grp12.c  opcodes_Grp13.c  opcodes_Grp14.c  opcodes_Grp15.c  opcodes_Grp16.c  opcodes_Grp2.c  opcodes_Grp3.c  opcodes_Grp4.c  opcodes_Grp5.c  opcodes_Grp6.c  opcodes_Grp7.c  opcodes_Grp8.c  opcodes_Grp9.c  opcodes_MMX.c  opcodes_N_Z.c  opcodes_SSE.c  opcodes_prefixes.c
MS12-042/sysret-source/junk/sources/include/beaengine/: BeaEngine.h  basic_types.h  export.h  macros.h
MS13-005/: README.md  ms13-005-funz-poc.cpp
MS13-046/: README.md
MS13-053/: README.md
MS14-002/: CVE-2013-5065.c  CVE-2013-5065.py  README.md
MS14-040/: README.md
MS14-040/CVE-2014-1767/: 39446.py  39525.py  MS14-040.cpp  MS14-40-x32.py
MS14-058/: CVE-2014-4113-Exploit.rar  README.md
MS14-058/Exploit/: Exploit.sln
MS14-058/Exploit/Exploit/: Exploit.cpp  Exploit.vcxproj  Exploit.vcxproj.filters  ReadMe.txt  stdafx.cpp
MS14-058/Exploit/Exploit/Release/: Exploit.pch
MS14-058/Exploit/Release/: Exploit.iobj  Exploit.ipdb
MS14-058/Trigger/: Trigger.sln
MS14-058/Trigger/Trigger/: ReadMe.txt  Trigger.cpp  Trigger.vcxproj  Trigger.vcxproj.filters  stdafx.cpp
MS14-066/: LICENSE  README.md  winshock_test.sh
MS14-068/: README.md
MS14-068/pykek/: README.md  ms14-068.py
MS14-068/pykek/kek/: ccache.py  crypto.py  krb5.py  pac.py  util.py
MS14-068/pykek/kek/_crypto/: ARC4.py  MD4.py  MD5.py
MS14-070/: CVE-2014-4076.c  MS14-070.rar  README.md
MS15-001/: README.md
MS15-010/: README.md
MS15-015/: README.md
MS15-051/: README.md
MS15-061/: README.md  ms15-061.cpp
MS15-076/: README.md
MS15-077/: HTFontExp.rar  README.md  ex.cpp
MS15-097/: README.md
MS15-097/exp/: README.md  _CVE_2015_2546_exp.cpp
MS16-014/: ms16-014.rar
MS16-016/: README.md
MS16-032/: MS16-032.ps1  README.md
MS16-034/: FillRgn_BSoD.cpp  MS16-034-exp.cpp  README.md
MS16-075/: README.md  Tater.ps1  ms16-075.rb
MS16-098/: README.md  main.c
MS16-111/: 40429.cs  README.md
MS16-135/: 41015.c  MS16-135.ps1  README.md
MS17-010/: README.md
MS17-017/: MS17-017.cpp  README.md
win-exp-suggester/: 2017-06-14-mssb.xls  README.md  help.md  windows-exploit-suggester.py
(+63 files in other folders)
